force-app/main/default/objects/TwilioConfiguration__c/TwilioConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Twilio Configuration</label>
</CustomObject>