force-app/main/default/objects/TwilioConfiguration__c/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <description>The Account SID of your Twilio Account</description>
    <label>Account SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>