force-app/main/default/objects/TwilioConfiguration__c/fields/Environment_Id__c.field-meta.xml
<CustomField>
    <fullName>Environment_Id__c</fullName>
    <label>Environment Id</label>
    <length>254</length>
    <type>Text</type>
</CustomField>