force-app/main/default/objects/TwilioConfiguration__c/fields/MediaBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>MediaBaseUrl__c</fullName>
    <label>MediaBaseUrl</label>
    <length>254</length>
    <type>Text</type>
</CustomField>