force-app/main/default/objects/TwilioConfiguration__c/fields/StatusCallbackUrl__c.field-meta.xml
<CustomField>
    <fullName>StatusCallbackUrl__c</fullName>
    <label>StatusCallbackUrl</label>
    <type>TextArea</type>
</CustomField>